--- a/index2.html
+++ b/index2.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty</title>
+    <title>Второй файл</title>
 </head>
 <body>
-    <h1>Привет</h1>
 	<h2>Hello</h2>
 </body>
 </html>
